# yh_user_sdk

./: .gitignore  README.md  changelog.md  pyproject.toml
example/: README.md  bot.py  disk.py  expression.py  group.py  msg.py  sticker.py  sticky.py  tool.py  user.py  web.py  ws.py
src/yh_user_sdk/: __init__.py  config.py
src/yh_user_sdk/core/: __init__.py  bot.py  group.py  msg.py  other.py  tool.py  user.py  web.py  ws.py
src/yh_user_sdk/proto/: bot_pb2.py  chat_ws_go_pb2.py  group_pb2.py  msg_pb2.py  user_pb2.py
src/yh_user_sdk/proto/origin/: bot.proto  chat-ws-go.proto  group.proto  msg.proto  user.proto
yh_user_sdk/: __init__.py  config.py
yh_user_sdk/core/: group.py  lazy.py  msg.py  other.py  user.py  ws.py
yh_user_sdk/proto/: conversation_pb2.py  msg_pb2.py  user_pb2.py
yh_user_sdk/proto/origin/: chat-ws-go.proto  conversation.proto  group.proto  msg.proto  user.proto
